🐛 fix vh on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ p {
   position: relative; }
 
 .header {
-  height: 100vh;
+  height: calc(var(--vh, 1vh) * 100);
   width: 100%;
   color: #f0f0f0;
   background: url(/assets/images/site-backdrop.png) no-repeat;
@@ -142,14 +142,14 @@ p {
     padding: 4rem 0;
     align-self: flex-end; }
   .header__column {
-    height: calc(100vh / 3);
+    height: calc(var(--vh, 1vh) * 100 / 3);
     display: flex;
     justify-content: center; }
 
 #header-mouseover {
   cursor: none;
   --cursorX: 50vw;
-  --cursorY:50vh; }
+  --cursorY:calc(var(--vh, 1vh) * 50); }
 
 #header-mouseover:before {
   content: '';
